rename project, change actions a little

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -25,7 +25,7 @@
   </div>
 
   <div>
-    <button {{action 'readBoardGame'}}>Read Board Game 1</button>: {{singleGameName}}
+    <button {{action 'readBoardGame'}}>Read Board Game 1</button>
   </div>
 
   <div>
